--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
         "react-timer-hook": "^3.0.5",
         "react-toastify": "^9.0.8",
         "react-top-loading-bar": "^2.3.1",
-        "react-webcam": "^7.0.1"
+        "react-webcam": "^7.0.1",
+        "socket.io-client": "^4.8.1"
     },
     "devDependencies": {
         "@testing-library/jest-dom": "5.16.4",
