--- a/package.json
+++ b/package.json
@@ -24,40 +24,41 @@
     "dependencies": {
         "@emotion/react": "^11.10.4",
         "@emotion/styled": "^11.10.4",
-        "@mediapipe/camera_utils": "^0.3.1675466862",
+        "@mediapipe/camera_utils": "^0.3.1640029074",
         "@mediapipe/face_detection": "^0.4.1646425229",
-        "@mui/icons-material": "^6.1.9",
-        "@mui/material": "^6.1.10",
+        "@mui/icons-material": "^5.10.9",
+        "@mui/material": "^5.10.10",
         "@reduxjs/toolkit": "^1.8.6",
         "axios": "^1.7.7",
+        "exam-guard-client": "file:",
         "moment": "^2.29.4",
-        "next": "15.0.3",
+        "next": "12.3.1",
         "next-auth": "^4.15.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "react-redux": "^9.1.2",
+        "react-redux": "^8.0.4",
         "react-timer-hook": "^3.0.5",
-        "react-toastify": "^10.0.6",
+        "react-toastify": "^9.0.8",
         "react-top-loading-bar": "^2.3.1",
         "react-webcam": "^7.0.1",
         "socket.io-client": "^4.8.1"
     },
     "devDependencies": {
-        "@testing-library/jest-dom": "6.6.3",
+        "@testing-library/jest-dom": "5.16.4",
         "@testing-library/react": "13.2.0",
-        "@testing-library/user-event": "14.5.2",
+        "@testing-library/user-event": "14.2.0",
         "@types/axios": "^0.14.0",
         "@types/jest": "^29.5.13",
-        "@types/node": "^22.10.1",
+        "@types/node": "^18.19.54",
         "@types/react": "^18.0.21",
         "eslint": "8.25.0",
-        "eslint-config-next": "15.0.3",
-        "eslint-plugin-testing-library": "^7.0.0",
-        "husky": "^9.1.6",
+        "eslint-config-next": "12.3.1",
+        "eslint-plugin-testing-library": "^6.3.0",
+        "husky": "^8.0.2",
         "jest": "28.1.0",
-        "jest-environment-jsdom": "29.7.0",
-        "lint-staged": "^15.2.10",
+        "jest-environment-jsdom": "28.1.0",
+        "lint-staged": "^13.0.3",
         "sass": "^1.79.4",
-        "typescript": "^5.6.3"
+        "typescript": "^4.8.4"
     }
 }
